<resources>
    <string name="app_name">Alex</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_example">Name Example</string>
    <string name="description_example">Description Example</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="enter_description">Enter Description</string>
    <string name="save_changues">Save Changues</string>
    <string name="enter_name">Enter Name</string>
</resources>
