<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="pe.edu.upc.alex.fragments.NotificationFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:hint="@string/name"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/default_margin"
             />
        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/enter_name"
            app:layout_constraintStart_toEndOf="@id/nameTextView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/default_margin"
             />
        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/default_margin"
             />
        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/enter_description"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView"
            app:layout_constraintStart_toEndOf="@id/descriptionTextView"
            />
        <RatingBar
            android:id="@+id/rate2RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/descriptionEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:layout_margin="@dimen/default_margin"
            android:numStars="5"
            android:rating="5"/>
        <Button
            android:id="@+id/enterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rate2RatingBar"
            android:text="@string/save_changues"
            />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>
